[package]
name = "tinyusb-sys"
description = "Bindings to the tinyusb library"
version = "0.1.1"
authors = ["Nicolas Viennot <nicolas@viennot.com>"]
homepage = "https://github.com/nviennot/tinyusb-sys-rs"
repository = "https://github.com/nviennot/tinyusb-sys-rs"
license = "MIT"
readme = "README.md"
categories = ["external-ffi-bindings", "embedded", "gui", "no-std"]
keywords = ["tinyusb"]
edition = "2021"
build = "build.rs"
links = "tinyusb"

[dependencies]
cty = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.68"
glob = "0.3"
